# AppCompiler

./: .env.example  .gitignore  README.md  docker-compose.yml  setup.ps1  start.ps1
backend/: .coverage  Dockerfile  alembic.ini  appforge_dev.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  config.py  database.py  deps.py  env_loader.py  main.py  redis_client.py
backend/app/codegen/: nextjs_generator.py  runtime_simulator.py
backend/app/evaluation/: dataset.py  evaluator.py  runner.py
backend/app/llm/: __init__.py  client.py  prompt_loader.py  response_parser.py
backend/app/middleware/: rate_limit.py  request_context.py
backend/app/models/: __init__.py  evaluation.py  generation.py
backend/app/pipeline/: orchestrator.py  stage1_intent.py  stage2_design.py  stage3_schemas.py  stage4_validation.py  stage5_refinement.py  stage6_codegen.py
backend/app/routers/: evaluate.py  generate.py  health.py  status.py
backend/app/schemas/: api_models.py  app_schema.py  pipeline_schemas.py
backend/app/services/: job_service.py
backend/app/utils/: cost_tracker.py  logger.py  structured_log.py
backend/app/validator/: cross_layer_validator.py  json_validator.py  repair_engine.py
backend/prompts/v1/: 01_intent_extraction.system.jinja2  01_intent_extraction.user.jinja2  02_system_design.system.jinja2  03_ui_schema.system.jinja2  04_api_schema.system.jinja2  07_repair.system.jinja2  (+3 more)
backend/scripts/: export_prompts_to_jinja.py  patch_prompt_modules.py
backend/tests/: conftest.py
(+47 files in other folders)
